# Nolfaris

./: .gitignore  CMakeLists.txt  CMakeLists.txt.back  NokeLexer.g4  NokeParser.g4
.antlr/: noke.interp  nokeParser.java
src/: CMakeLists.txt  main.cpp  test.h
src/antlr/: noke.g4  nokeBaseListener.cpp  nokeBaseListener.h  nokeListener.cpp  nokeListener.h  nokeParser.cpp  nokeParser.h
src/antlr/.antlr/: nokeParser.java
src/cpp/: error.cpp  main.cpp  nobject.cpp  tools.cpp
src/data/: errors.json
src/headers/: error.h  error.hpp  nobject.h  nobject.hpp  tools.h  tools.hpp
